new commit again

--- a/newfile.ipynb
+++ b/newfile.ipynb
@@ -3,30 +3,30 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ea1d6ed9-4056-4ef9-a4bf-e084e22f3429",
+   "id": "66484632-0e42-4b05-aeb4-a29b98ede4b7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello world\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"hello world\")"
+    "#imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "541d8d4b-cb3f-46bb-9bea-0386a7b7e692",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f28523d0-8917-41b3-9f9d-39b6e4b22eaf",
+   "id": "3e1c7b76-39ea-423e-ad69-0cc1dab58c83",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(\"hello again\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
